--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Hello Android</string>
+
+
+
+    <string name="ok">OK</string>
+    <string name="name">Name</string>
+    <string name="enter_your_name">Enter your name</string>
 </resources>
